# better-blender-mcp

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: plugin.json
agents/: import-export-manager.md  mesh-processor.md  scene-inspector.md
skills/game-ready-export/: SKILL.md
skills/metashape-round-trip/: SKILL.md
skills/terrain-cleanup-pipeline/: SKILL.md
skills/tile-import-verification/: SKILL.md
src/blender_mcp/: __init__.py  proxy.py  queue.py  server.py
src/blender_mcp/resources/: __init__.py  scene_resources.py
src/blender_mcp/tools/: __init__.py  import_export.py  mesh.py  modifiers.py  project.py  scene.py  transforms.py  viewport.py
src/blender_mcp/utils/: __init__.py  mesh_utils.py  naming.py  responses.py
tests/: conftest.py  test_naming.py  test_queue.py  test_responses.py
