[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blender-mcp"
version = "0.1.0"
description = "MCP server for Blender 5.1+ — embedded FastMCP server with 46 tools for scene management, mesh operations, import/export, and photogrammetry terrain processing."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "mcp[cli]>=1.2.0",
    "fastmcp>=2.0.0",
]

[project.scripts]
blender-mcp = "blender_mcp.proxy:main"

[project.urls]
Homepage = "https://github.com/jenkinsm13/blender-mcp"
Repository = "https://github.com/jenkinsm13/blender-mcp"

[tool.hatch.build]
sources = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
